[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dpa_api"
description = "Backend API for Dallas Pets Alive"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "cerealbox",
    "fastapi",
    "mangum",
]
dynamic = ["version"]
