[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dpa_api"
description = "Backend API for Dallas Pets Alive"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "cerealbox",
    "fastapi",
    "mangum",
    "pre-commit",
    "pytest-cov",
]
dynamic = ["version"]

[tool.pytest.ini_options]
addopts = [
    "--cov=dpa_api",
    "--cov-report=term-missing",
    "--cov-branch",
    "--cov-fail-under=90",
]
testpaths = [
    "tests",
]
